--- a/main.html
+++ b/main.html
@@ -4,5 +4,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
+	<form id="urlForm">
+        <input type="text" id="name" name="name" placeholder="Enter your name">
+        <input type="number" id="year" name="year" placeholder="Enter a year">
+        <button type="submit" id="button">Submit</button>
+    </form>
+    <h3 id="url">https://localhost:8080/</h3>
+
 
 </html>
